Fixed spacing, aligned alignment to SISU page 1

--- a/css/page.css
+++ b/css/page.css
@@ -689,12 +689,10 @@ html:not(.evolved) .oobe-header h1 {
 
 .eula-box.microsoft {
   background: var(--color-wifi-item-bg-selected);
-  /* height: 200px; */
 }
 
 .eula-box.thirdparty {
   background: transparent;
-  /* border: 1px solid var(--color-border-default); */
   flex: 1;
   min-height: 0;
   margin-bottom: 4px;
@@ -1037,7 +1035,7 @@ body[data-page-id="msa_info"] .info-cards-list {
   flex-direction: column;
   gap: 8px;
   margin-top: 16px;
-  flex: 1;
+  /* flex: 1; */
 }
 .signin-info p{
   margin:0;
@@ -1047,9 +1045,9 @@ body[data-page-id="msa_info"] .info-cards-list {
   flex-direction: column;
   gap: 16px;
   flex: 1;
-  justify-content: center;
+  /* justify-content: center; */
   background: var(--smtc-background-layer-solid);
-  border-radius: var(--smtc-corner-window-default, 8px);
+  border-radius: var(--smtc-corner-window-default);
   padding: 24px 24px 8px;
 }
 .msa-signin-form-wrapper mai-text-input {
